# Hello-REAL-World-ROS

./: README.md
W1 ROS Essentials/: README.md
W2 URDF/Sources/hrwros_support/urdf/: hrwros.xacro
W3 Navigation/Sources/hrwros_assignments/hrwros_week2_assignment/: README.md
W3 Navigation/Sources/hrwros_assignments/hrwros_week3_assignment/: package.xml
W3 Navigation/Sources/hrwros_gazebo/src/: conveyor_spawner.cpp
W3 Navigation/Sources/hrwros_support/urdf/: hrwros.urdf
W4 Manipulation/Sources/hrwros/hrwros_moveit_config/: .setup_assistant  package.xml
W4 Manipulation/Sources/hrwros_assignments/hrwros_week1_assignment/: package.xml
W4 Manipulation/Sources/hrwros_assignments/hrwros_week2_assignment/: CMakeLists.txt
W4 Manipulation/Sources/hrwros_assignments/hrwros_week3_assignment/: CMakeLists.txt
W4 Manipulation/Sources/hrwros_assignments/week4_moveit_config/: CMakeLists.txt
W4 Manipulation/Sources/hrwros_gazebo/launch/: hrwros_environment.launch
W4 Manipulation/Sources/hrwros_week3/launch/: hrwros_turtlebot_navigation.launch
W4 Manipulation/Sources/hrwros_week3/scripts/: turtlebot_circle.py
W4 Manipulation/Sources/hrwros_week4/scripts/: simple_pick_place.py
W5 Robot Vision/Sources/hrwros/hrwros_msgs/: package.xml
W5 Robot Vision/Sources/hrwros/hrwros_week1/: package.xml
W5 Robot Vision/Sources/hrwros_assignments/hrwros_week2_assignment/: package.xml
W5 Robot Vision/Sources/hrwros_assignments/hrwros_week2_assignment/urdf/: hrwros_assignment1.urdf  hrwros_assignment3.xacro
W5 Robot Vision/Sources/hrwros_assignments/hrwros_week2_assignment/urdf/robot/: lrmate200ic_macro.xacro
W5 Robot Vision/Sources/hrwros_assignments/hrwros_week4_assignment/: CMakeLists.txt  package.xml
W5 Robot Vision/Sources/hrwros_assignments/hrwros_week5_assignment/: CMakeLists.txt
W5 Robot Vision/Sources/hrwros_assignments/week4_moveit_config/: .setup_assistant
W5 Robot Vision/Sources/hrwros_gazebo/src/: conveyor_spawner_node.cpp  urdf_creator_test.cpp
W5 Robot Vision/Sources/hrwros_gazebo/worlds/: hrwros.world
W5 Robot Vision/Sources/hrwros_moveit_config/config/: hrwros.srdf  ompl_planning.yaml  ros_controllers.yaml
W5 Robot Vision/Sources/hrwros_moveit_config/launch/: demo_gazebo.launch  (+4 more)
W5 Robot Vision/Sources/hrwros_week3/: package.xml
W6 Capstone/Sources/hrwros_assignments/hrwros_week1_assignment/: CMakeLists.txt
W6 Capstone/Sources/hrwros_assignments/hrwros_week1_assignment/launch/: hrwros_week1_assignment3.launch
W6 Capstone/Sources/hrwros_factory_behaviors/flexbe_behaviors/: package.xml  setup.py
W6 Capstone/Sources/hrwros_factory_behaviors/flexbe_behaviors/manifest/: final_project.xml
W6 Capstone/Sources/hrwros_factory_behaviors/flexbe_behaviors/src/flexbe_behaviors/: final_project_sm.py
W6 Capstone/Sources/hrwros_factory_states/: package.xml  setup.py
W6 Capstone/Sources/hrwros_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
W6 Capstone/Sources/hrwros_support/: package.xml
W6 Capstone/Sources/hrwros_week4/: package.xml
W6 Capstone/Sources/hrwros_week5/: package.xml
W6 Capstone/Sources/hrwros_week6/: package.xml
W6 Capstone/Sources/hrwros_week6/launch/: hrwros_final_project.launch
W6 Capstone/Sources/hrwros_week6/scripts/: spawn_one_object.py
(+102 files in other folders)
