<?xml version="1.0"?>
<package format="2">
  <name>hrwros_week3</name>
  <version>0.1.0</version>
  <description>The hrwros_week3 package</description>
  <maintainer email="noreply@hrwros.mooc">HRWROS mooc maintainers</maintainer>
  <author email="noreply@hrwros.mooc">Mukunda Bharatheesha</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
</package>
