<?xml version="1.0"?>
<package format="2">
  <name>hrwros_week6</name>
  <version>0.1.0</version>
  <description>The hrwros_week6 package</description>
  <maintainer email="noreply@hrwros.mooc">HRWROS mooc maintainers</maintainer>
  <author>Carlos Hernandez</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>flexbe_behavior_engine</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>hrwros_gazebo</exec_depend>
  <exec_depend>hrwros_moveit_config</exec_depend>
  <exec_depend>hrwros_support</exec_depend>
  


</package>
