<?xml version="1.0"?>
<package format="2">
  <name>hrwros_week2_assignment</name>
  <version>0.0.0</version>
  <description>HRWROS MOOC week 2 support material</description>
  <author>G. vd. Hoorn</author>
  <maintainer email="noreply@hrwros.mooc">HRWROS mooc maintainers</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>hrwros_support</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>
